Fix sticky header by setting overflow-x on body rather than html

--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 a:link, a:visited, a:hover, a:active {
